--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
     "npm": "^10.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-github-calendar": "^4.0.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.16.0",
@@ -48,6 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
